# django-activity-stream

./: .gitignore  pyproject.toml
actstream/: __init__.py  actions.py  apps.py  feeds.py  managers.py  models.py  registry.py  utils.py  views.py
actstream/migrations/: 0004_add_swapable_models.py
actstream/templatetags/: activity_tags.py
actstream/tests/: base.py  test_activity.py  test_gfk.py  test_views.py
docs/source/: configuration.rst  data.rst
runtests/: settings.py
runtests/custom_models/: __init__.py  apps.py  models.py  tests.py
runtests/custom_models/migrations/: 0001_initial.py
