[tool.poetry]
name = "django-activity-stream"
version = "0.10.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
